# Thesis_CICD-Testapplication

./: CMakeLists.txt  README.md
CICD_Example/: CICD_Example.cpp  CICD_Example.h  CMakeLists.txt
app/: CMakeLists.txt  app.cpp  app.h
integrationtest/: CMakeLists.txt  integrationtest.cpp  integrationtest.h
lib/: CMakeLists.txt
lib/caneasy/gtest_1.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  gtest_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/googletest/: CMakeLists.txt
lib/googletest/include/gtest/: gtest.h
regressiontest/: CMakeLists.txt  regressiontest.cpp  regressiontest.h
test/: CMakeLists.txt  test.cpp
unittest/: CmakeLists.txt  FixtureTest.h  unittest_1.cpp
