# CMakeList.txt : CMake project for CICD_Example, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CICD_Example "CICD_Example.cpp" "CICD_Example.h")

# TODO: Add tests and install targets if needed.
